<resources>
    <string name="app_name">Ejemplo Radio y Checks</string>
    <string name="chkCheckBox1">Soy un check box</string>
    <string name="tvPregunta1">¿Cuál es la capital de México?</string>
    <string name="rbRespuesta1">Guadalajara</string>
    <string name="rbRespuesta2">Ciudad de México</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="tvMensaje1">No has seleccionado nada</string>
</resources>