<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="64dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <CheckBox
        android:id="@+id/chkCheckBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chkCheckBox1"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvPregunta1"/>

    <RadioGroup
        android:id="@+id/rgPregunta1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rbRespuesta1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbRespuesta1"/>

        <RadioButton
            android:id="@+id/rbRespuesta2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbRespuesta2"/>

    </RadioGroup>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="30dp"/>

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAceptar"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <!--Etiqueta para mostrar el estado de el checkbox-->

    <TextView
        android:id="@+id/tvMensaje1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="30dp"/>

    <!--Etiqueta para mostrar el estado de el radiobutton-->

    <TextView
        android:id="@+id/tvMensaje2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="30dp"/>

</LinearLayout>
